src/test/compile-fail/missingmod.rc
// error-pattern:error opening

mod doesnotexist;